# SearchScript

./: .gitignore  CLAUDE.md  SearchScript_latest.txt  SearchScript_latest_metadata.json  config.py  file_utils.py  main.py  pyproject.toml  search_controller.py  search_engine.py  test_refactor.py  ui_components.py
bundle_workflow_template/: bundle_app.py  decode_app.py  transfer_cli.py  transfer_config.json
deploy/: bundle_app.py  decode_app.py
docs/superpowers/plans/: 2026-04-04-size-filter-units.md
docs/superpowers/specs/: 2026-04-04-size-filter-units-design.md
search_script/: config.py  constants.py  file_utils.py  inventory.py  main.py  models.py  ripgrep_backend.py  search_controller.py  search_engine.py  search_index.py  ui_components.py
tests/: test_search.py
