[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-script"
version = "1.0.0"
description = "GUI file search tool with advanced filtering"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
file-search = "search_script.main:main"
