[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-script"
version = "1.0.0"
description = "GUI file search tool with advanced filtering"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "basedpyright"]
fuzzy = ["rapidfuzz>=3.0"]

[project.scripts]
file-search = "search_script.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
